# House-Controling-System

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gesture_rules.yaml  rooms.yaml
docs/: YOLOV5_TRAINING_NOTES.md
launch/: home_assistant_base.launch  home_assistant_camera_mediapipe.launch  home_assistant_keyboard_demo.launch  home_assistant_voice_demo.launch
scripts/: audio_feedback_node.py  camera_stream_node.py  collect_gesture_dataset.py  gesture_interpreter_node.py  home_visualizer_node.py  keyboard_gesture_mock_node.py  mediapipe_gesture_node.py  state_manager_node.py  voice_command_node.py  vosk_asr_arecord_node.py  vosk_asr_node.py
