<?xml version="1.0"?>
<package format="2">
  <name>local_home_assistant</name>
  <version>0.1.0</version>
  <description>ROS1 local multimodal home assistant with gesture control and Pygame 2D simulator.</description>
  <maintainer email="user@example.com">ros</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
